Update ListTick mixins after a hiatus
Signed-off-by: Gabriel Harris-Rouquette <gabizou@me.com>